[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/CreatureCardRepresentation.gd" type="Script" id=1]
[ext_resource path="res://assets/cards/cardimages/owl.png" type="Texture" id=2]
[ext_resource path="res://assets/cards/black.png" type="Texture" id=3]
[ext_resource path="res://scripts/HandMenu.gd" type="Script" id=4]
[ext_resource path="res://scripts/FieldMenu.gd" type="Script" id=5]
[ext_resource path="res://scripts/OpponentFieldMenu.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.45, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ) ]
}

[node name="CardRepresentation" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -48.0
margin_right = 70.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 70, 48 )
texture_normal = ExtResource( 2 )

[node name="Info" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 68 )
texture = ExtResource( 3 )

[node name="Power" type="Label" parent="Info"]
margin_left = -44.0
margin_top = -6.0
margin_right = -4.0
margin_bottom = 8.0
text = "P: 12"

[node name="Health" type="Label" parent="Info"]
margin_left = 4.0
margin_top = -6.0
margin_right = 46.0
margin_bottom = 8.0
text = "H: 12"

[node name="HandMenu" type="Node2D" parent="."]
position = Vector2( -40, -80 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="HandMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 76.0
margin_bottom = 6.0
size_flags_horizontal = 3
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HandMenu/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -44.0
margin_right = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Play" type="Button" parent="HandMenu/Control/VBoxContainer"]
margin_right = 76.0
margin_bottom = 20.0
text = "Play"

[node name="Fuse" type="Button" parent="HandMenu/Control/VBoxContainer"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 44.0
text = "Fuse"

[node name="Cancel" type="Button" parent="HandMenu/Control/VBoxContainer"]
margin_top = 48.0
margin_right = 76.0
margin_bottom = 68.0
text = "Cancel"

[node name="FieldMenu" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -70, -120 )
script = ExtResource( 5 )

[node name="Control" type="Control" parent="FieldMenu"]
margin_right = 140.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="FieldMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="Attack" type="Button" parent="FieldMenu/Control/VBoxContainer"]
margin_top = 2.0
margin_right = 140.0
margin_bottom = 22.0
text = "Attack"

[node name="Effect" type="Button" parent="FieldMenu/Control/VBoxContainer"]
margin_top = 26.0
margin_right = 140.0
margin_bottom = 46.0
text = "Effect"

[node name="Cancel" type="Button" parent="FieldMenu/Control/VBoxContainer"]
margin_top = 50.0
margin_right = 140.0
margin_bottom = 70.0
text = "Cancel"

[node name="OpponentFieldMenu" type="Node2D" parent="."]
visible = false
position = Vector2( -70, -100 )
script = ExtResource( 6 )

[node name="Control" type="Control" parent="OpponentFieldMenu"]
margin_right = 140.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="OpponentFieldMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
alignment = 2

[node name="Select" type="Button" parent="OpponentFieldMenu/Control/VBoxContainer"]
margin_top = 6.0
margin_right = 140.0
margin_bottom = 26.0
text = "Select"

[node name="Cancel" type="Button" parent="OpponentFieldMenu/Control/VBoxContainer"]
margin_top = 30.0
margin_right = 140.0
margin_bottom = 50.0
text = "Cancel"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 1 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HandMenu/Control/VBoxContainer/Play" to="HandMenu" method="_on_Play_pressed"]
[connection signal="pressed" from="HandMenu/Control/VBoxContainer/Fuse" to="HandMenu" method="_on_Fuse_pressed"]
[connection signal="pressed" from="HandMenu/Control/VBoxContainer/Cancel" to="HandMenu" method="_on_Cancel_pressed"]
[connection signal="pressed" from="FieldMenu/Control/VBoxContainer/Attack" to="FieldMenu" method="_on_Attack_pressed"]
[connection signal="pressed" from="FieldMenu/Control/VBoxContainer/Effect" to="FieldMenu" method="_on_Effect_pressed"]
[connection signal="pressed" from="FieldMenu/Control/VBoxContainer/Cancel" to="FieldMenu" method="_on_Cancel_pressed"]
[connection signal="pressed" from="OpponentFieldMenu/Control/VBoxContainer/Select" to="OpponentFieldMenu" method="_on_Select_pressed"]
[connection signal="pressed" from="OpponentFieldMenu/Control/VBoxContainer/Cancel" to="OpponentFieldMenu" method="_on_Cancel_pressed"]
